// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmissionPicker closes the picker 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#D8D8D8",
      "borderBottomWidth": 0.5,
      "borderStyle": "solid",
      "marginHorizontal": 16,
      "marginTop": 16,
      "paddingBottom": 4,
    }
  }
>
  <TouchableHighlight
    accessibilityTraits="button"
    onPress={[Function]}
    testID="header.toggle-submission_history-picker"
    underlayColor="white"
  >
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "fontWeight": "500",
              },
              false,
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Dec 31, 2015 at 5:01 PM
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../src/images/picker-arrow.png",
          }
        }
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            false,
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`SubmissionPicker opens the picker 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#D8D8D8",
      "borderBottomWidth": 0.5,
      "borderStyle": "solid",
      "marginHorizontal": 16,
      "marginTop": 16,
      "paddingBottom": 4,
    }
  }
>
  <TouchableHighlight
    accessibilityTraits="button"
    onPress={[Function]}
    testID="header.toggle-submission_history-picker"
    underlayColor="white"
  >
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "fontWeight": "500",
              },
              false,
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Dec 31, 2015 at 5:01 PM
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../src/images/picker-arrow.png",
          }
        }
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            false,
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`SubmissionPicker renders the picker with a 0 index 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#D8D8D8",
      "borderBottomWidth": 0.5,
      "borderStyle": "solid",
      "marginHorizontal": 16,
      "marginTop": 16,
      "paddingBottom": 4,
    }
  }
>
  <TouchableHighlight
    accessibilityTraits="button"
    onPress={[Function]}
    testID="header.toggle-submission_history-picker"
    underlayColor="white"
  >
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "fontWeight": "500",
              },
              Object {
                "color": "#374A59",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Apr 26, 2017 at 11:46 AM
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../src/images/picker-arrow.png",
          }
        }
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Object {
              "transform": Array [
                Object {
                  "rotate": "180deg",
                },
              ],
            },
          ]
        }
      />
    </View>
  </TouchableHighlight>
  <PickerIOS
    onValueChange={[Function]}
    selectedValue={0}
    testID="header.picker"
  >
    <Item
      label="Apr 26, 2017 at 11:46 AM"
      value={0}
    />
    <Item
      label="Dec 31, 2015 at 5:01 PM"
      value={1}
    />
  </PickerIOS>
</View>
`;

exports[`SubmissionPicker renders the picker with a non-zero index 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#D8D8D8",
      "borderBottomWidth": 0.5,
      "borderStyle": "solid",
      "marginHorizontal": 16,
      "marginTop": 16,
      "paddingBottom": 4,
    }
  }
>
  <TouchableHighlight
    accessibilityTraits="button"
    onPress={[Function]}
    testID="header.toggle-submission_history-picker"
    underlayColor="white"
  >
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "fontWeight": "500",
              },
              Object {
                "color": "#374A59",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Dec 31, 2015 at 5:01 PM
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../src/images/picker-arrow.png",
          }
        }
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            Object {
              "transform": Array [
                Object {
                  "rotate": "180deg",
                },
              ],
            },
          ]
        }
      />
    </View>
  </TouchableHighlight>
  <PickerIOS
    onValueChange={[Function]}
    selectedValue={1}
    testID="header.picker"
  >
    <Item
      label="Apr 26, 2017 at 11:46 AM"
      value={0}
    />
    <Item
      label="Dec 31, 2015 at 5:01 PM"
      value={1}
    />
  </PickerIOS>
</View>
`;

exports[`SubmissionPicker renders with a submission 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#D8D8D8",
      "borderBottomWidth": 0.5,
      "borderStyle": "solid",
      "marginHorizontal": 16,
      "marginTop": 16,
      "paddingBottom": 4,
    }
  }
>
  <TouchableHighlight
    accessibilityTraits="button"
    onPress={[Function]}
    testID="header.toggle-submission_history-picker"
    underlayColor="white"
  >
    <View
      style={
        Object {
          "flex": 0,
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "color": "#8B969E",
                "fontSize": 14,
                "fontWeight": "500",
              },
              false,
            ],
            Object {
              "fontFamily": ".SFUIDisplay-medium",
            },
          ]
        }
      >
        Apr 26, 2017 at 11:46 AM
      </Text>
      <Image
        source={
          Object {
            "testUri": "../../../src/images/picker-arrow.png",
          }
        }
        style={
          Array [
            Object {
              "alignSelf": "center",
            },
            false,
          ]
        }
      />
    </View>
  </TouchableHighlight>
</View>
`;

exports[`SubmissionPicker renders with no submission 1`] = `
<View
  style={
    Array [
      Object {
        "borderBottomColor": "#D8D8D8",
        "borderBottomWidth": 0.5,
        "borderStyle": "solid",
        "marginHorizontal": 16,
        "marginTop": 16,
        "paddingBottom": 4,
      },
      Object {
        "paddingBottom": 21,
      },
    ]
  }
/>
`;

exports[`SubmissionPicker renders with only one submission history 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#D8D8D8",
      "borderBottomWidth": 0.5,
      "borderStyle": "solid",
      "marginHorizontal": 16,
      "marginTop": 16,
      "paddingBottom": 4,
    }
  }
>
  <View
    style={
      Object {
        "flex": 0,
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "color": "#8B969E",
            "fontSize": 14,
            "fontWeight": "500",
          },
          Object {
            "fontFamily": ".SFUIDisplay-medium",
          },
        ]
      }
    >
      Apr 26, 2017 at 11:46 AM
    </Text>
  </View>
</View>
`;
